✨ Use generated api code
